--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "i18next": "^23.2.11",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-i18next": "^13.0.2",
     "uuidv4": "^6.2.13",
     "wouter": "^2.11.0",
     "zustand": "^4.3.9"
