--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-i18next": "^13.0.2",
+    "swiper": "^10.0.4",
     "uuidv4": "^6.2.13",
     "wouter": "^2.11.0",
     "zustand": "^4.3.9"
